--- a/references.bib
+++ b/references.bib
@@ -43,6 +43,317 @@ title = {A smart camera for the surveillance of vehicles in intelligent transpor
 doi = {https://doi.org/10.1007/s11042-015-3151-y}
 }
 
+
+@article{abdulrahim2016traffic,
+  title={Traffic surveillance: A review of vision based vehicle detection, recognition and tracking},
+  author={Abdulrahim, Khairi and Salam, Rosalina Abdul},
+  journal={International journal of applied engineering research},
+  volume={11},
+  number={1},
+  pages={713--726},
+  year={2016}
+}
+
+@article{radhakrishnan2013video,
+  title={Video object extraction by using background subtraction techniques for sports applications},
+  author={Radhakrishnan, M},
+  journal={Digital Image Processing},
+  volume={5},
+  number={9},
+  pages={91--97},
+  year={2013}
+}
+
+
+@article{li2011vehicles,
+  title={Vehicles detection based on three-frame-difference method and cross-entropy threshold method},
+  author={Li, Qiu-Lin and He, Jia-Feng},
+  journal={Computer Engineering},
+  volume={37},
+  number={4},
+  pages={172--174},
+  year={2011}
+}
+
+
+
+@INPROCEEDINGS{6746425,
+
+  author={Liu, Ya and Lu, Yao and Shi, Qingxuan and Ding, Jianhua},
+
+  booktitle={2013 Ninth International Conference on Computational Intelligence and Security}, 
+
+  title={Optical Flow Based Urban Road Vehicle Tracking}, 
+
+  year={2013},
+
+  volume={},
+
+  number={},
+
+  pages={391-395},
+
+  doi={10.1109/CIS.2013.89}}
+
+
+
+
+@inproceedings{park2007video,
+  title={Video-based detection of street-parking violation},
+  author={Park, Kiseo and Lee, Daeho and Park, Youngtae},
+  booktitle={2007 International Conference on Image Processing, Computer Vision, and Pattern Recognition, IPCV 2007},
+  pages={152--156},
+  year={2007}
+}
+
+
+@inproceedings{BMVC.9.13,
+
+   title = {A Generic Deformable Model for Vehicle Recognition.},
+
+   author = {Ferryman, JM and Worrall, AD and Sullivan, GD and Baker, KD},
+
+   year = {1995},
+
+   pages = {13.1-13.10},
+
+   booktitle = {Proceedings of the British Machine Vision Conference},
+
+   publisher = {BMVA Press},
+
+   editors = {Pycock, David and },
+
+   isbn = {0-9521898-2-8},
+
+   note = {doi:10.5244/C.9.13}
+
+}
+
+
+
+@INPROCEEDINGS{1570927,
+
+  author={Dongjin Han and Leotta, M.J. and Cooper, D.B. and Mundy, J.L.},
+
+  booktitle={2005 IEEE International Workshop on Visual Surveillance and Performance Evaluation of Tracking and Surveillance}, 
+
+  title={Vehicle Class Recognition from Video-Based on 3D Curve Probes}, 
+
+  year={2005},
+
+  volume={},
+
+  number={},
+
+  pages={285-292},
+
+  doi={10.1109/VSPETS.2005.1570927}}
+
+
+
+@misc{zhao2019object,
+      title={Object Detection with Deep Learning: A Review}, 
+      author={Zhong-Qiu Zhao and Peng Zheng and Shou-tao Xu and Xindong Wu},
+      year={2019},
+      eprint={1807.05511},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+
+@INPROCEEDINGS{6909475,
+
+  author={Girshick, Ross and Donahue, Jeff and Darrell, Trevor and Malik, Jitendra},
+
+  booktitle={2014 IEEE Conference on Computer Vision and Pattern Recognition}, 
+
+  title={Rich Feature Hierarchies for Accurate Object Detection and Semantic Segmentation}, 
+
+  year={2014},
+
+  volume={},
+
+  number={},
+
+  pages={580-587},
+
+  doi={10.1109/CVPR.2014.81}}
+
+
+
+@article{uijlings2013selective,
+  title={Selective search for object recognition},
+  author={Uijlings, Jasper RR and Van De Sande, Koen EA and Gevers, Theo and Smeulders, Arnold WM},
+  journal={International journal of computer vision},
+  volume={104},
+  number={2},
+  pages={154--171},
+  year={2013},
+  publisher={Springer}
+}
+
+
+
+@inproceedings{kaiming2014jian,
+  title={Jian Sun “Spatial pyramid pooling in deep convolutional networks for visual recognition‖ European”},
+  author={Kaiming, He and Xiangyu, Zhang and Shaoqing, Ren},
+  booktitle={Conference on Computer Vision},
+  year={2014}
+}
+
+
+@inproceedings{liu2016ssd,
+  title={Ssd: Single shot multibox detector},
+  author={Liu, Wei and Anguelov, Dragomir and Erhan, Dumitru and Szegedy, Christian and Reed, Scott and Fu, Cheng-Yang and Berg, Alexander C},
+  booktitle={European conference on computer vision},
+  pages={21--37},
+  year={2016},
+  organization={Springer}
+}
+
+
+
+@INPROCEEDINGS{7780460,
+
+  author={Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+
+  booktitle={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
+
+  title={You Only Look Once: Unified, Real-Time Object Detection}, 
+
+  year={2016},
+
+  volume={},
+
+  number={},
+
+  pages={779-788},
+
+  doi={10.1109/CVPR.2016.91}}
+
+
+@INPROCEEDINGS{6909673,
+
+  author={Erhan, Dumitru and Szegedy, Christian and Toshev, Alexander and Anguelov, Dragomir},
+
+  booktitle={2014 IEEE Conference on Computer Vision and Pattern Recognition}, 
+
+  title={Scalable Object Detection Using Deep Neural Networks}, 
+
+  year={2014},
+
+  volume={},
+
+  number={},
+
+  pages={2155-2162},
+
+  doi={10.1109/CVPR.2014.276}}
+
+
+
+@INPROCEEDINGS{8100173,
+
+  author={Redmon, Joseph and Farhadi, Ali},
+
+  booktitle={2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
+
+  title={YOLO9000: Better, Faster, Stronger}, 
+
+  year={2017},
+
+  volume={},
+
+  number={},
+
+  pages={6517-6525},
+
+  doi={10.1109/CVPR.2017.690}}
+
+
+@misc{redmon2018yolov3,
+      title={YOLOv3: An Incremental Improvement}, 
+      author={Joseph Redmon and Ali Farhadi},
+      year={2018},
+      eprint={1804.02767},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+
+@inproceedings{cai2016unified,
+  title={A unified multi-scale deep convolutional neural network for fast object detection},
+  author={Cai, Zhaowei and Fan, Quanfu and Feris, Rogerio S and Vasconcelos, Nuno},
+  booktitle={European conference on computer vision},
+  pages={354--370},
+  year={2016},
+  organization={Springer}
+}
+
+
+@article{hu2018sinet,
+  title={SINet: A scale-insensitive convolutional neural network for fast vehicle detection},
+  author={Hu, Xiaowei and Xu, Xuemiao and Xiao, Yongjie and Chen, Hao and He, Shengfeng and Qin, Jing and Heng, Pheng-Ann},
+  journal={IEEE transactions on intelligent transportation systems},
+  volume={20},
+  number={3},
+  pages={1010--1019},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{ARINALDI2018259,
+title = {Detection and classification of vehicles for traffic video analytics},
+journal = {Procedia Computer Science},
+volume = {144},
+pages = {259-268},
+year = {2018},
+note = {INNS Conference on Big Data and Deep Learning},
+issn = {1877-0509},
+doi = {https://doi.org/10.1016/j.procs.2018.10.527},
+url = {https://www.sciencedirect.com/science/article/pii/S1877050918322361},
+author = {Ahmad Arinaldi and Jaka Arya Pradana and Arlan Arventa Gurusinga},
+keywords = {Traffic Video Analysis, Vehicle Detection, Vehicle Classification, Faster RCNN},
+}
+
+
+@article{lowe2004distinctive,
+  title={Distinctive image features from scale-invariant keypoints},
+  author={Lowe, David G},
+  journal={International journal of computer vision},
+  volume={60},
+  number={2},
+  pages={91--110},
+  year={2004},
+  publisher={Springer}
+}
+
+
+
+@inproceedings{dalal2005histograms,
+  title={Histograms of oriented gradients for human detection},
+  author={Dalal, Navneet and Triggs, Bill},
+  booktitle={2005 IEEE computer society conference on computer vision and pattern recognition (CVPR'05)},
+  volume={1},
+  pages={886--893},
+  year={2005},
+  organization={Ieee}
+}
+
+
+@inproceedings{viola2001rapid,
+  title={Rapid object detection using a boosted cascade of simple features},
+  author={Viola, Paul and Jones, Michael},
+  booktitle={Proceedings of the 2001 IEEE computer society conference on computer vision and pattern recognition. CVPR 2001},
+  volume={1},
+  pages={I--I},
+  year={2001},
+  organization={Ieee}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
 @article{LIUDIMULYO201767,
   title={Traffic surveillance: A review of vision based vehicle detection, recognition and tracking},
   author={Abdulrahim, Khairi and Salam, Rosalina Abdul},
