[update] some update

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,8 +1,9 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{graphicx} % [draft]{graphicx} to remove all images
-\graphicspath{ {images/} }
+\graphicspath{{images/}}
 \usepackage{wrapfig}
+\usepackage{bbm}
 
 \usepackage{breakcites}
 
