--- a/references.bib
+++ b/references.bib
@@ -74,6 +74,30 @@ doi = {https://doi.org/10.1007/s11042-015-3151-y}
   pages={172--174},
   year={2011}
 }
+  
+@article{redmon2016look,
+      title={You Only Look Once: Unified, Real-Time Object Detection}, 
+      author={Joseph Redmon and Santosh Divvala and Ross Girshick and Ali Farhadi},
+      year={2016},
+      eprint={1506.02640},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@incollection{KOTU201517,
+title = {Chapter 2 - Data Mining Process},
+editor = {Vijay Kotu and Bala Deshpande},
+booktitle = {Predictive Analytics and Data Mining},
+publisher = {Morgan Kaufmann},
+address = {Boston},
+pages = {17-36},
+year = {2015},
+isbn = {978-0-12-801460-8},
+doi = {https://doi.org/10.1016/B978-0-12-801460-8.00002-1},
+url = {https://www.sciencedirect.com/science/article/pii/B9780128014608000021},
+author = {Vijay Kotu and Bala Deshpande},
+keywords = {CRISP, KDD, data mining process, prior knowledge, modeling, data preparation, evaluation, application}
+}
 
 
 
