--- a/preamble.tex
+++ b/preamble.tex
@@ -13,7 +13,7 @@
 %%% thesis geometry
 
 \usepackage[text={115mm,197.2mm},hmarginratio=1:1,vmarginratio=1:1,marginparwidth=12mm]{geometry} 
-
+\usepackage{mwe}
 %=======================================================================
 
 \usepackage{lipsum} %generating lorem ipsum
