--- a/frontmatter/title_temp.tex
+++ b/frontmatter/title_temp.tex
@@ -2,33 +2,44 @@
 
 % \addcontentsline{toc}{chapter}{Title}
 
-{\Large \noindent \color{Test3} Author} \newline
+{\Large \noindent \color{Test3} Dr. Mohammad Motiur Rahman \\ Arafat Hasan, Sayed Sohan} \newline
 
 \vspace{1cm}
 
 {\begin{flushleft}
 \fontsize{21.8}{26.16} \selectfont \bfseries \noindent 
-Title of the Thesis
+Deep Learning Based Traffic Vehicle Detection 
 \end{flushleft}}
 
 \vspace{3mm}
 
-{\LARGE \noindent Subtitle if \vspace{1.0mm}\\ 
-it is needed \newline}
+{\LARGE \noindent YOLO with ORB to Push Performance \vspace{1.0mm} \\ 
+  and \vspace{1.0mm} \\
+  Their Comparison with some High Speed Models \vspace{1.0mm}\\
+\newline}
 
 \vspace{5.7cm}
 
-\noindent Thesis for the Degree of Philosophiae Doctor \newline 
 
-\noindent Trondheim, June 2021 \newline
+\noindent  \newline 
+Research of B.Sc (Engg), CSE5000
 
-\noindent Norwegian University of Science and Technology \\
-Faculty of Information Technology and Electrical Engineering \\
-Department of Electronic Systems
+\noindent 25, September 2021 \newline
+
 
 \vspace{1.5cm}
 
-\noindent \includegraphics[width=0.39\textwidth]{figures/ntnu-logo-bw.png}
+\begin{minipage}{0.3\textwidth}
+\begin{figure}[H]
+\noindent \includegraphics[width=0.7\textwidth]{figures/mbstu.jpg}
+%\caption{\label{fig:blue_rectangle} Rectangle}
+\end{figure}
+\end{minipage} \hfill
+\begin{minipage}{0.7\textwidth}
+\vspace{.5cm}
+\noindent Mawlana Bhashani Science and Technology University  \\
+Department of Computer Science and Engineering
+\end{minipage}
 
 \newpage
 
@@ -37,49 +48,46 @@ Department of Electronic Systems
 {
 \fontsize{10}{11.4}\selectfont
 
-\noindent \textbf{NTNU} \\
-\textit{Norges teknisk-naturvitenskapelige universitet} \\
-Norwegian University of Science and Technology \\
+\noindent \textbf{MSBTU, CSE} \\
+\textit Mawlana Bhashani Science and Technology University}  \\
+Department of Computer Science and Engineering
 \\
-Thesis for the Degree of Philosophiae Doctor \\
-Faculty of Information Technology and Electrical Engineering \\
-Department of Electronic Systems \\
+Research of B.Sc (Engg), CSE5000
 \\
 Submitted \hspace{8mm} dd/mm/yyyy; \\
 Approved \hspace{8.8mm} dd/mm/yyyy; \\
-Date of defense \hspace{1.0mm} dd/mm/yyyy; R{\aa}dsrommet G144 | (time) \\
+Date of defense \hspace{1.0mm} dd/mm/yyyy; \\
 \\
 Supervisors \\
-Prof. Supervisor \& Prof. Co-supervisor \\
+Prof. Dr. Mohammad Motiur Rahman  \\
 \\
-Assessment Committee
-\vspace{-2.0mm}
-\begin{itemize}[itemsep=0.7pt, parsep=0.7pt, leftmargin=3.5mm, label=\adforn{43}]
-\item 1st opponent \\
-Dr. 1st opponent, \\ \textit{Name of the institute in the original language} \\ Name of the institute in English\\ City, Country
-\item 2nd opponent \\
-Dr. 2nd opponent, \\ \textit{Name of the institute in the original language} \\ Name of the institute in English\\ City, Country
-\item Additional members of the committee and administrator \\
-Prof. committee
-\end{itemize}
+%Assessment Committee
+%\vspace{-2.0mm}
+%\begin{itemize}[itemsep=0.7pt, parsep=0.7pt, leftmargin=3.5mm, label=\adforn{43}]
+%\item 1st opponent \\
+%Dr. 1st opponent, \\ \textit{Name of the institute in the original language} \\ Name of the institute in English\\ City, Country
+%\item 2nd opponent \\
+%Dr. 2nd opponent, \\ \textit{Name of the institute in the original language} \\ Name of the institute in English\\ City, Country
+%\item Additional members of the committee and administrator \\
+%Prof. committee
+%\end{itemize}
 
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}} 
 
 \vspace{3.0mm}
 
-\noindent {\fontsize{8.5}{10}\fontfamily{bch}\selectfont\bfseries\scshape{Title of the Thesis}} \vspace{3.0mm} \\
-\noindent Chapters 1-3 \copyright \ 2021 Author (unless otherwise stated) \\
-Chapter 4 \copyright \ 2017 Name of journal publisher 1 \\
-Chapter 5 \copyright \ 2018 Name of journal publisher 2 \\
-Chapter 6 \copyright \ 2020 Name of journal publisher 3 \\
-Chapter 7 \copyright \ 2021 Author \\
-\\ 
-ISBN {123-45-678-9101-2} (printed ver.) \\
-ISBN {123-45-678-9101-2} (electronic ver.) \\
-ISSN {1234-5678} (printed ver.) \\
-ISSN {1234-5678} (online ver.) \\
-\\
-Doctoral theses at NTNU, 2021:12 \\
-\\
-Printed by NTNU Grafisk senter
-}
+\noindent {\fontsize{8.5}{10}\fontfamily{bch}\selectfont\bfseries\scshape{Deep Learning Based Traffic Vehicle Detection}} \vspace{3.0mm} \\
+%Chapter 4 \copyright \ 2017 Name of journal publisher 1 \\
+%Chapter 5 \copyright \ 2018 Name of journal publisher 2 \\
+%Chapter 6 \copyright \ 2020 Name of journal publisher 3 \\
+%Chapter 7 \copyright \ 2021 Author \\
+%\\ 
+%ISBN {123-45-678-9101-2} (printed ver.) \\
+%ISBN {123-45-678-9101-2} (electronic ver.) \\
+%ISSN {1234-5678} (printed ver.) \\
+%ISSN {1234-5678} (online ver.) \\
+%\\
+%Doctoral theses at NTNU, 2021:12 \\
+%\\
+%Printed by NTNU Grafisk senter
+%}
