--- a/mainmatter/ch1.tex
+++ b/mainmatter/ch1.tex
@@ -17,39 +17,39 @@ Intelligent vehicle detection and counting are becoming increasingly important i
 
 Vehicle detection and statistics in highway monitoring video scenes are of considerable significance to intelligent traffic management and control of the highway. With the popular installation of traffic surveillance cameras, a vast database of traffic video footage has been obtained for analysis. Generally, at a high viewing angle, a more-distant road surface can be considered. The object size of the vehicle changes greatly at this viewing angle, and the detection accuracy of a small object far away from the road is low. In the face of complex camera scenes, it is essential to effectively solve the above problems and further apply them \cite{SongH2019}. 
 
-A CCTV camera is a very essential part of an intelligent traffic surveillance framework. It is simply the automated process of monitoring the traffic in a particular area and detecting vehicles for further action, as shown in the diagram. The captured images can provide valuable clues to the cops and other public essential tracking services, such as vehicle’s license plate number, time and motion of vehicle, details associated with the driver, etc.. which all may lead to evidence of some crime or any unforeseen or unfortunate incidents. Earlier people used to process images manually. In fact, this system is still going on in India, whereas countries like the USA also have implemented automated machines- CCTVs that function 24x7 and take immediate action via signaling too. Manual work has always been proven slower and less efficient due to human errors and many other factors that affect living beings. Keeping these points in mind and moving with the advancement of technologies, many innovative thinkers have developed certain intelligent traffic control systems using various techniques. This research is based upon the combination of two prior-made researches by scholars whose works have been published \cite{Baran2016}.
+A CCTV camera is a very essential part of an intelligent traffic surveillance framework . It is simply the automated process of monitoring the traffic in a particular area and detecting vehicles for further action, as shown in the diagram. The captured images can provide valuable clues to the cops and other public essential tracking services, such as vehicle’s license plate number, time and motion of vehicle, details associated with the driver, etc.. which all may lead to evidence of some crime or any unforeseen or unfortunate incidents . Earlier people used to process images manually. In fact, this system is still going on in India, whereas countries like the USA also have implemented automated machines- CCTVs that function 24x7 and take immediate action via signaling too. Manual work has always been proven slower and less efficient due to human errors and many other factors that affect living beings. Keeping these points in mind and moving with the advancement of technologies, many innovative thinkers have developed certain intelligent traffic control systems using various techniques. This research is based upon the combination of two prior-made researches by scholars whose works have been published \cite{Baran2016}.
 
 \end{sloppypar}
 
-%\begin{figure} % \begin{figure} will let LaTeX decide the best figure placement for you ; \begin{figure}[H] for forcing the figure placement here ; in the bottom, \begin{figure}[!b] ; top of the page, \begin{figure}[!t]
-%    \centering
-%    \includegraphics[width=0.95\textwidth]{figures/paper-iv/fig-1.png}
-%    \caption[SEM images of AlN on graphene formed via different MEE cycles]{SEM images of AlN on graphene formed via different MEE cycles. (\textbf{a},\textbf{d}), (\textbf{b},\textbf{e}) and (\textbf{c},\textbf{f}) are (top-, bird’s eye-view) SEM images of samples A1, A2 and A3, respectively. Scale bars are 1 {\textmu}m. Features marked with yellow lines, yellow (orange) contours and yellow dashed outlines are high-density AlN nanostructures grown along line defects of graphene, individual (coalesced) AlN islands and areas of exposed graphene, respectively. Yellow arrows in samples A2 and A3 show the lateral growth of AlN nanostructures that initially nucleate at the line defects of graphene in sample A1 (adapted with permission from ref. \citenum{liudimulyo2020853} \copyright \ Liudi Mulyo \textit{et al}, 2020.}
-%    \label{fig:figures/paper-iv/fig-1}
-%\end{figure}
+\begin{figure} % \begin{figure} will let LaTeX decide the best figure placement for you ; \begin{figure}[H] for forcing the figure placement here ; in the bottom, \begin{figure}[!b] ; top of the page, \begin{figure}[!t]
+    \centering
+    \includegraphics[width=0.95\textwidth]{figures/paper-iv/fig-1.png}
+    \caption[SEM images of AlN on graphene formed via different MEE cycles]{SEM images of AlN on graphene formed via different MEE cycles. (\textbf{a},\textbf{d}), (\textbf{b},\textbf{e}) and (\textbf{c},\textbf{f}) are (top-, bird’s eye-view) SEM images of samples A1, A2 and A3, respectively. Scale bars are 1 {\textmu}m. Features marked with yellow lines, yellow (orange) contours and yellow dashed outlines are high-density AlN nanostructures grown along line defects of graphene, individual (coalesced) AlN islands and areas of exposed graphene, respectively. Yellow arrows in samples A2 and A3 show the lateral growth of AlN nanostructures that initially nucleate at the line defects of graphene in sample A1 (adapted with permission from ref. \citenum{liudimulyo2020853} \copyright \ Liudi Mulyo \textit{et al}, 2020.}
+    \label{fig:figures/paper-iv/fig-1}
+\end{figure}
 
-%\section{Section 1 in chapter 1}
-%\lipsum[2]
+\section{Section 1 in chapter 1}
+\lipsum[2]
 
-%\begin{equation}
-%    EQE = \frac{q \times P_{opt}}{I \times h\nu}
-%\end{equation}
+\begin{equation}
+    EQE = \frac{q \times P_{opt}}{I \times h\nu}
+\end{equation}
 
-%\lipsum[3-4]
+\lipsum[3-4]
 
-%\subsection{Subsection 1.1 of section 1 in chapter 1}
-%\lipsum[5-7]
+\subsection{Subsection 1.1 of section 1 in chapter 1}
+\lipsum[5-7]
 
-%\subsection{Subsection 1.2 of section 1 in chapter 1}
-%\lipsum[8-10]
+\subsection{Subsection 1.2 of section 1 in chapter 1}
+\lipsum[8-10]
 
-%\clearpage\phantomsection % to fix wrong hyperref to this section
-%\section[Long section title displayed in the table of content]{Short section title in the chapter}
-%\sectionmark{Even shorter title on the header}
-%\lipsum[11-20]
+\clearpage\phantomsection % to fix wrong hyperref to this section
+\section[Long section title displayed in the table of content]{Short section title in the chapter}
+\sectionmark{Even shorter title on the header}
+\lipsum[11-20]
 
-%\subsection{Subsection 1.2 of section 2 in chapter 1}
-%\lipsum[13-14]
+\subsection{Subsection 1.2 of section 2 in chapter 1}
+\lipsum[13-14]
 
 %=======================================================================
 %%% References 
