fine tuning and finishing

--- a/abstract.tex
+++ b/abstract.tex
@@ -3,7 +3,7 @@
 \pagenumbering{roman}
 \setcounter{page}{1}
 
-Intelligent vehicle detection and vehicle counting are becoming increasingly important in the field of vehicular automation specially in traffic controlling, road management and crime control. It is possible to solve many other traffic related problems which are generally not possible by humans. We propose a deep learning method by modifying YOLOv5( You Only Look Once) object detection model and by preprocessing the dataset using ORB(Oriented FAST and rotated BRIEF) . Our proposed method beats the existing detection model results in our current dhaka ai dataset. Our output of the proposed method looks promising compared to other methods. This work can be used in many modern tasks which require classification, counting and detecting vehicles in the roads of Bangladesh.
+Intelligent vehicle detection and vehicle counting are becoming increasingly important in the field of vehicular automation specially in traffic controlling, road management and crime control. It is possible to solve many other traffic related problems which are generally not possible by humans. We propose a deep learning method by modifying YOLOv5( You Only Look Once) object detection model and by preprocessing the dataset using ORB(Oriented FAST and rotated BRIEF) . Our proposed method beats the existing detection model results in our current Dhaka AI dataset. Our output of the proposed method looks promising compared to other methods. This work can be used in many modern tasks which require classification, counting and detecting vehicles in the roads of Bangladesh.
  
     \footnotesize
     \vspace{1cm}
