--- a/main.tex
+++ b/main.tex
@@ -94,17 +94,20 @@
 \newpage
 \input{chapters/name1.tex}
 \chapter{Introduction}
+\label{chap:intro}
 \input{chapters/01.Introduction.tex}
 
 
 \newpage
 \input{chapters/name2.tex}
 \chapter{Related Works}
+\label{chap:related-works}
 \input{chapters/02.LiteratureReview.tex}
 
 \newpage
 \input{chapters/name3.tex}
-\chapter{ Object Detection With YOLOv5}
+\chapter{Object Detection With YOLOv5}
+\label{chap:object-detection-with-yolo}
 \input{chapters/03.ObjectDetectionWithYOLO.tex}
 
 
@@ -112,17 +115,20 @@
 \newpage
 \input{chapters/name4.tex}
 \chapter{Methodology}
+\label{chap:methodology}
 \input{chapters/04.ProposedMethodology.tex}
 
 
 \newpage
 \input{chapters/name5.tex}
 \chapter{ Results \& Analysis}
+\label{chap:results-analysis}
 \input{chapters/05.ResultAnalysisDiscussion.tex}
 
 \newpage
 \input{chapters/name6.tex}
 \chapter{Conclusion and Future Work}
+\label{chap:conclusion-future-work}
 \input{chapters/06.ConclusionFutureWork.tex}
 
 \printbibliography[heading=bibintoc, title={Bibliography}]
