--- a/references.bib
+++ b/references.bib
@@ -139,13 +139,83 @@ doi = {10.1007/978-3-642-31968-6_70}
 	title = {Real-Time Vehicle Detection and Tracking System in Street Scenarios},
 	year = {2012}}
 
+@misc{redmon2016look,
+      title={You Only Look Once: Unified, Real-Time Object Detection}, 
+      author={Joseph Redmon and Santosh Divvala and Ross Girshick and Ali Farhadi},
+      year={2016},
+      eprint={1506.02640},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
 
-@article{abdulrahim2016traffic,
-  title={Traffic surveillance: A review of vision based vehicle detection, recognition and tracking},
-  author={Abdulrahim, Khairi and Salam, Rosalina Abdul},
-  journal={International journal of applied engineering research},
-  volume={11},
-  number={1},
-  pages={713--726},
-  year={2016}
+@inproceedings{orb,
+author = {Rublee, Ethan and Rabaud, Vincent and Konolige, Kurt and Bradski, Gary},
+year = {2011},
+month = {11},
+pages = {2564-2571},
+title = {ORB: an efficient alternative to SIFT or SURF},
+journal = {Proceedings of the IEEE International Conference on Computer Vision},
+doi = {10.1109/ICCV.2011.6126544}
+}
+
+@article{10.1145/358669.358692,
+author = {Fischler, Martin A. and Bolles, Robert C.},
+title = {Random Sample Consensus: A Paradigm for Model Fitting with Applications to Image Analysis and Automated Cartography},
+year = {1981},
+issue_date = {June 1981},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {24},
+number = {6},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/358669.358692},
+doi = {10.1145/358669.358692},
+abstract = {A new paradigm, Random Sample Consensus (RANSAC), for fitting a model to experimental
+data is introduced. RANSAC is capable of interpreting/smoothing data containing a
+significant percentage of gross errors, and is thus ideally suited for applications
+in automated image analysis where interpretation is based on the data provided by
+error-prone feature detectors. A major portion of this paper describes the application
+of RANSAC to the Location Determination Problem (LDP): Given an image depicting a
+set of landmarks with known locations, determine that point in space from which the
+image was obtained. In response to a RANSAC requirement, new results are derived on
+the minimum number of landmarks needed to obtain a solution, and algorithms are presented
+for computing these minimum-landmark solutions in closed form. These results provide
+the basis for an automatic system that can solve the LDP under difficult viewing},
+journal = {Commun. ACM},
+month = jun,
+pages = {381–395},
+numpages = {15},
+keywords = {camera calibration, location determination, image matching, automated cartography, model fitting, scene analysis}
+}
+
+@misc{wang2019cspnet,
+      title={CSPNet: A New Backbone that can Enhance Learning Capability of CNN}, 
+      author={Chien-Yao Wang and Hong-Yuan Mark Liao and I-Hau Yeh and Yueh-Hua Wu and Ping-Yang Chen and Jun-Wei Hsieh},
+      year={2019},
+      eprint={1911.11929},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+
+@inproceedings{10.1007/978-3-319-10578-9_23,
+	abstract = {Existing deep convolutional neural networks (CNNs) require a fixed-size (e.g. 224{\texttimes}224) input image. This requirement is ``artificial'' and may hurt the recognition accuracy for the images or sub-images of an arbitrary size/scale. In this work, we equip the networks with a more principled pooling strategy, ``spatial pyramid pooling'', to eliminate the above requirement. The new network structure, called SPP-net, can generate a fixed-length representation regardless of image size/scale. By removing the fixed-size limitation, we can improve all CNN-based image classification methods in general. Our SPP-net achieves state-of-the-art accuracy on the datasets of ImageNet 2012, Pascal VOC 2007, and Caltech101.},
+	address = {Cham},
+	author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	booktitle = {Computer Vision -- ECCV 2014},
+	editor = {Fleet, David and Pajdla, Tomas and Schiele, Bernt and Tuytelaars, Tinne},
+	isbn = {978-3-319-10578-9},
+	pages = {346--361},
+	publisher = {Springer International Publishing},
+	title = {Spatial Pyramid Pooling in Deep Convolutional Networks for Visual Recognition},
+	year = {2014}}
+	
+	
+@misc{lin2015microsoft,
+      title={Microsoft COCO: Common Objects in Context}, 
+      author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
+      year={2015},
+      eprint={1405.0312},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
 }
